--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                         <h5 class="fw-bold text-primary text-uppercase">OBODONLASHTIRISH BOSH BOSHQARMASI</h5>
                         <h1 class="mb-0">TOSHKENT SHAHAR OBODONLASHTIRISH BOSH BOSHQARMASI O'Z YO'NALISHIDA SIZGA YORDAM BERISHI MUMKIN</h1>
                     </div>
-                    <a href="quote.html" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Xabar jo'natish</a>
+                    <a href="http://obodon.uz.form.tilda.ws/form" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Xabar jo'natish</a>
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
